VERSION 0.32 (2018-07-??)
  * Handling of errors in running docker commands fixed.
  * 'update' command for docker submenu added.

VERSION 0.31 (2018-07-26)
  * Adapted to new version of RSuite.

VERSION 0.30 (2018-07-06)
  * Fixes related to MacOS support (realpath behaves differently)
  * 'update' command for MacOS works properly: it will ask for admin
	password if not running as administrator.

VERSION 0.29 (2018-06-24)
  * `proj lock` and `proj unlock` subcommands added.
  * `tmpl` subcommand added.

VERSION 0.28 (2018-06-01)
  * --no-vignettes added to `proj build`
  * --vanilla_sups and --no-built-check added to `proj depsinst`

VERSION 0.27 (2018-05-29)
  * just adopted for new version of R Suite

VERSION 0.26 (2018-05-23)
  * support for vignettes in skip-build-step option for 'pkgzip github' and
    'repo addgithub'

VERSION 0.25 (2018-04-23)
  * install command adapted to install RSuiteRStudio add-in.
  * main windows script adapted to detect non global R installation.
  * docker command has new sub-commands to support development process:
     run, list, stop, exec, build

VERSION 0.24 (2018-04-18)
  * docker command has new parameter -i (--image) which makes it possible
     to build solution on specific(non default) image.
  * On Windows path to tar is removed before any R Suite script is called as
     it breaks any built of package.

VERSION 0.23 (2018-03-09)
  * sysreqs subcommand added for management of system requirements.
  * WiX installer contains also bash script for MinGW bash terminals.

VERSION 0.22 (2018-01-19)
  * R version can be enforced then building docker zip/image
  * For Linux bash_completions added.

VERSION 0.21 (2018-01-17)
  * MSI does not prompt for reboot any more
  * 'rsuite install' has option to install also packages required
    to use RStudio plug-ins
  * MSI is properly signed

VERSION 0.20 (2017-12-08)
  * 'proj build' has option to force rebuild packages.